--- a/ECampusConnect-ejb/pom.xml
+++ b/ECampusConnect-ejb/pom.xml
@@ -38,6 +38,28 @@
             <version>7.0</version>
             <scope>provided</scope>
         </dependency>
+        
+        
+        
+        <dependency>
+            <groupId>org.apache.derby</groupId>
+            <artifactId>derbyclient</artifactId>
+            <version>10.10.1.1</version>
+            <scope>runtime</scope>
+        </dependency>        
+        <dependency>
+            <groupId>org.eclipse.persistence</groupId>
+            <artifactId>javax.persistence</artifactId>
+            <version>2.1.0</version>
+        </dependency>
+        <dependency>
+            <groupId>org.eclipse.persistence</groupId>
+            <artifactId>eclipselink</artifactId>
+            <version>2.5.1</version>
+            <scope>runtime</scope>
+        </dependency>
+    
+        
     </dependencies>
 
     <build>
