--- a/ECampusConnect-web/src/main/webapp/WEB-INF/web.xml
+++ b/ECampusConnect-web/src/main/webapp/WEB-INF/web.xml
@@ -4,28 +4,34 @@
         <servlet-name>Home</servlet-name>
         <servlet-class>Home</servlet-class>
     </servlet>
+    <servlet>
+        <servlet-name>Hello</servlet-name>
+        <servlet-class>demo.Hello</servlet-class>
+    </servlet>
     <servlet-mapping>
         <servlet-name>Home</servlet-name>
         <url-pattern>/Home</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>Hello</servlet-name>
+        <url-pattern>/Hello</url-pattern>
     </servlet-mapping>
     <session-config>
         <session-timeout>
             30
         </session-timeout>
     </session-config>
-    
     <servlet>
-    <servlet-name>RESTful Jersey CRUD Service</servlet-name>
-    <servlet-class>org.glassfish.jersey.servlet.ServletContainer</servlet-class>
-    <init-param>
-        <param-name>jersey.config.server.provider.packages</param-name>
-        <param-value>main.java.com.javapapers.webservices.rest.jersey</param-value>
-    </init-param>
-    <load-on-startup>1</load-on-startup>
-  </servlet>
-  <servlet-mapping>
-    <servlet-name>RESTful Jersey CRUD Service</servlet-name>
-    <url-pattern>/rest/*</url-pattern>
-  </servlet-mapping>
-    
+        <servlet-name>RESTful Jersey CRUD Service</servlet-name>
+        <servlet-class>org.glassfish.jersey.servlet.ServletContainer</servlet-class>
+        <init-param>
+            <param-name>jersey.config.server.provider.packages</param-name>
+            <param-value>main.java.com.javapapers.webservices.rest.jersey</param-value>
+        </init-param>
+        <load-on-startup>1</load-on-startup>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>RESTful Jersey CRUD Service</servlet-name>
+        <url-pattern>/rest/*</url-pattern>
+    </servlet-mapping>
 </web-app>
