--- a/ECampusConnect-web/src/main/webapp/WEB-INF/web.xml
+++ b/ECampusConnect-web/src/main/webapp/WEB-INF/web.xml
@@ -6,7 +6,19 @@
     </servlet>
     <servlet>
         <servlet-name>Hello</servlet-name>
-        <servlet-class>demo.Hello</servlet-class>
+        <servlet-class>Servlets.Hello</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>NewAdmin</servlet-name>
+        <servlet-class>Servlets.NewAdmin</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>NewStudent</servlet-name>
+        <servlet-class>Servlets.NewStudent</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>NewProfessor</servlet-name>
+        <servlet-class>Servlets.NewProfessor</servlet-class>
     </servlet>
     <servlet-mapping>
         <servlet-name>Home</servlet-name>
@@ -16,22 +28,21 @@
         <servlet-name>Hello</servlet-name>
         <url-pattern>/Hello</url-pattern>
     </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>NewAdmin</servlet-name>
+        <url-pattern>/NewAdmin</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>NewStudent</servlet-name>
+        <url-pattern>/NewStudent</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>NewProfessor</servlet-name>
+        <url-pattern>/NewProfessor</url-pattern>
+    </servlet-mapping>
     <session-config>
         <session-timeout>
             30
         </session-timeout>
     </session-config>
-    <servlet>
-        <servlet-name>RESTful Jersey CRUD Service</servlet-name>
-        <servlet-class>org.glassfish.jersey.servlet.ServletContainer</servlet-class>
-        <init-param>
-            <param-name>jersey.config.server.provider.packages</param-name>
-            <param-value>main.java.com.javapapers.webservices.rest.jersey</param-value>
-        </init-param>
-        <load-on-startup>1</load-on-startup>
-    </servlet>
-    <servlet-mapping>
-        <servlet-name>RESTful Jersey CRUD Service</servlet-name>
-        <url-pattern>/rest/*</url-pattern>
-    </servlet-mapping>
 </web-app>
