--- a/ECampusConnect-web/src/main/webapp/WEB-INF/web.xml
+++ b/ECampusConnect-web/src/main/webapp/WEB-INF/web.xml
@@ -76,7 +76,7 @@
     <servlet-class>org.glassfish.jersey.servlet.ServletContainer</servlet-class>
     <init-param>
         <param-name>jersey.config.server.provider.packages</param-name>
-        <param-value>com.javapapers.webservices.rest.jersey</param-value>
+        <param-value>Webservices</param-value>
     </init-param>
     <load-on-startup>1</load-on-startup>
   </servlet>
