Adding @EventListner and EVENT module

--- a/ECampusConnect-web/src/main/webapp/WEB-INF/web.xml
+++ b/ECampusConnect-web/src/main/webapp/WEB-INF/web.xml
@@ -32,6 +32,14 @@
         <servlet-name>DeleteStudent</servlet-name>
         <servlet-class>Servlets.DeleteStudent</servlet-class>
     </servlet>
+    <servlet>
+        <servlet-name>NewEvent</servlet-name>
+        <servlet-class>Servlets.NewEvent</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>ViewEvents</servlet-name>
+        <servlet-class>Servlets.ViewEvents</servlet-class>
+    </servlet>
     <servlet-mapping>
         <servlet-name>Home</servlet-name>
         <url-pattern>/Home</url-pattern>
@@ -64,24 +72,31 @@
         <servlet-name>DeleteStudent</servlet-name>
         <url-pattern>/DeleteStudent</url-pattern>
     </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>NewEvent</servlet-name>
+        <url-pattern>/NewEvent</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>ViewEvents</servlet-name>
+        <url-pattern>/ViewEvents</url-pattern>
+    </servlet-mapping>
     <session-config>
         <session-timeout>
             30
         </session-timeout>
     </session-config>
-    
     <display-name>RESTful Services CRUD</display-name>
- <servlet>
-    <servlet-name>RESTful Jersey CRUD Service</servlet-name>
-    <servlet-class>org.glassfish.jersey.servlet.ServletContainer</servlet-class>
-    <init-param>
-        <param-name>jersey.config.server.provider.packages</param-name>
-        <param-value>Webservices</param-value>
-    </init-param>
-    <load-on-startup>1</load-on-startup>
-  </servlet>
-  <servlet-mapping>
-    <servlet-name>RESTful Jersey CRUD Service</servlet-name>
-    <url-pattern>/rest/*</url-pattern>
-  </servlet-mapping>
+    <servlet>
+        <servlet-name>RESTful Jersey CRUD Service</servlet-name>
+        <servlet-class>org.glassfish.jersey.servlet.ServletContainer</servlet-class>
+        <init-param>
+            <param-name>jersey.config.server.provider.packages</param-name>
+            <param-value>Webservices</param-value>
+        </init-param>
+        <load-on-startup>1</load-on-startup>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>RESTful Jersey CRUD Service</servlet-name>
+        <url-pattern>/rest/*</url-pattern>
+    </servlet-mapping>
 </web-app>
